# flambe

./: README.md  docker-compose.yml
.github/workflows/: assignees-reviewers-auto-setting.yml
app/server/: .env.development  Dockerfile  README.md  alembic.ini  config.py  database.py  main.py  pyproject.toml  run.sh
app/server/controllers/: task_controller.py  user_controller.py
app/server/entities/: __init__.py  base.py  task.py  task_assignment.py  user.py
app/server/exceptions/: __init__.py  application_exception.py  error_messages.py  system_exception.py
app/server/migrations/: env.py
app/server/migrations/versions/: 20210324_211527_deeb16a1fce1_.py  20210325_013552_0b65f5810d92_.py  20210325_232825_82137e93ce0e_.py  20210329_220033_1b0c13fd33b4_.py  20210330_004119_38ef52fef2e6_.py  20210423_010538_b84d2f333990_.py
app/server/models/: __init__.py  base.py  user.py
app/server/repositories/: task_repository.py  user_repository.py
app/server/schemas/: db_schema.py  task_schema.py  user_schema.py
app/server/services/: task_service.py  user_service.py  user_with_dogin_task_data.py
app/server/utils/: crypt.py  sort.py
app/web-client/: .env.development  Dockerfile  README.md  package-lock.json  package.json  vue.config.js
app/web-client/src/: App.vue  main.ts  type.d.ts
app/web-client/src/api/: ApiInvoker.ts
app/web-client/src/components/: Sidebar.vue
app/web-client/src/models/: DoingTaskData.ts  Task.ts  TaskPriority.ts  TaskStatus.ts  TaskWithAssignees.ts  User.ts
doc/: 機能一覧.md
doc/テーブル定義/: Task.md  TaskAssignment.md  User.md
(+24 files in other folders)
